Implementing basic bindings for rabbit mq